Completed all index.html contents. Pending css edits to complete project.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Add CSS details to complete project and Submit-->
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
-
+    <!-- Backgroung image class created for integrating main heading, hyperlinks, and sub-titles with background image only -->
+    <div class="Background Image">
+      <!-- Page Header Title -->
+      <div id="Home">
+        <h1>Broadway Design</h1>
+      </div>
+      <!-- Body Shortcut Hyperlinks-->
+      <nav>
+        <a href="#Home">Home</a><br />
+        <!--Confusing on the next line as redline mock and codecademy objective page show "Process", but image showing expected
+        final result shows "About". Also, bottom of all pages show "About". Please Advise.
+        Process used for better sync with details on page -->
+        <a href="#Process">Process</a><br />
+        <a href="#Work">Work</a><br />
+        <a href="#Team">Team</a><br />
+        <a href="#Contact">Contact</a><br />
+      </nav>
+    </div>
+    <div id="Process">
+      <h2>Our Process</h2>
+      <img src="resources/images/identify.svg" alt="">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="resources/images/understand.svg" alt="">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="resources/images/execute.svg" alt="">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work</p>
+    </div>
+    <div class="Background Image">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="Work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div id="Team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="Contact">
+      <h3>Contact</h3>
+      <p>Phone: (555) 555-5555</p>
+      <p>Email: Test@Example.com</p>
+      <p>Twitter: @Test</p>
+    </div>
   </body>
+  <footer>&copy; Broadway 2017 <a href="#Home">Home</a> <a href="#Process">Process</a> <a href="#Work">Work</a>
+  <a href="#Team">Team</a> <a href="#Contact">Contact</a></footer>
 </html>
