--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       </div>
       <!-- Body Shortcut Hyperlinks-->
       <nav>
-        <a href="#Home">Home</a><br />
+        <div class="header-link"><a href="#Home">Home</a></div>
         <!--Confusing on the next line as redline mock and codecademy objective page show "Process", but image showing expected
         final result shows "About". Also, bottom of all pages show "About". Please Advise.
         Process used for better sync with details on page -->
-        <a href="#Process">Process</a><br />
-        <a href="#Work">Work</a><br />
-        <a href="#Team">Team</a><br />
-        <a href="#Contact">Contact</a><br />
+        <div class="header-link"><a href="#Process">Process</a></div>
+        <div class="header-link"><a href="#Work">Work</a></div>
+        <div class="header-link"><a href="#Team">Team</a></div>
+        <div class="header-link"><a href="#Contact">Contact</a></div>
       </nav>
     </div>
     <div id="Process">
